--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,11 @@ spring.datasource.password=emos
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # spring.jpa.show-sql=true
+
+
+#image file
+
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+project.image=images/
